Fixed responsive issue on Builder Admin Theme List > https://www.meistertask.com/app/task/qjYzsOnw/builder-new-admin-area-show-different-spacing-between-existing-themes

--- a/templates/plugin/css/create_edit.css
+++ b/templates/plugin/css/create_edit.css
@@ -386,3 +386,9 @@
     background-size: 123%;
 }
 
+/* Media Queries */
+@media (min-width: 992px) and (max-width: 1920px) {
+	.uf-thx-theme:nth-child(3n) {
+		margin-right: 0;
+	}
+}
